--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -10,17 +10,20 @@
           <div class="form-group">
             <label for="nome">Nome:</label>
             <input
+              [(ngModel)]='usuario.nome'
               class="form-control"
               type="text"
               name="nome"
               id="nome"
               placeholder="Seu usuário"
+
             />
           </div>
 
           <div class="form-group">
             <label for="usuario">Usuário:</label>
             <input
+            [(ngModel)]='usuario.usuario'
               class="form-control"
               type="text"
               name="usuario"
@@ -32,6 +35,7 @@
           <div class="form-group">
             <label for="foto">Link da Foto:</label>
             <input
+              [(ngModel)]='usuario.foto'
               class="form-control"
               type="text"
               name="foto"
@@ -43,6 +47,7 @@
           <div class="form-group">
             <label for="senha">Senha:</label>
             <input
+              (input)='confirmSenha($event)'
               class="form-control"
               type="password"
               name="senha"
@@ -54,6 +59,7 @@
           <div class="form-group">
             <label for="confirmSenha">Confirmar senha:</label>
             <input
+              [(ngModel)]='usuario.senha'
               class="form-control"
               type="password"
               name="confirmSenha"
@@ -64,7 +70,7 @@
 
           <div class="form-group">
             <label for="tipo">Tipo de Usuário:</label>
-            <select class="form-control" name="tipo" id="tipo">
+            <select class="form-control" name="tipo" id="tipo" (change)='tipoUsuario($event)'>
                 <option>Selecione um tipo de usuário:</option>
                 <option value="normal">Normal</option>
                 <option value="adm">Administrador</option>
@@ -72,8 +78,8 @@
           </div>
           <div class="d-flex justify-content-center">
             <button type="submit" class="btn btn-danger mr-4" routerLink="/entrar">Cancelar</button>
-            
-            <button type="submit" class="btn btn-success">Cadastrar</button>
+
+            <button type="submit" class="btn btn-success" (click)='cadastrar()'>Cadastrar</button>
           </div>
         </div>
       </div>
