--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -12,6 +12,7 @@
               name="usuario"
               id="usuario"
               placeholder="Seu usuário"
+              [(ngModel)]="usuarioLogin.usuario"
             />
           </div>
           <div class="form-group">
@@ -22,11 +23,12 @@
               name="senha"
               id="senha"
               placeholder="Sua senha"
+              [(ngModel)]="usuarioLogin.senha"
             />
           </div>
 
           <div class="d-flex justify-content-center">
-              <button type="submit" class="btn btn-success" routerLink="/inicio">Entrar</button>
+              <button type="submit" class="btn btn-success" (click)="entrar()">Entrar</button>
           </div>
 
           <hr class="mt-5 mb-5">
