--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -4,6 +4,8 @@
       <div class="row d-flex justify-content-center">
         <div class="col-md-6">
           <h1 class="text-center mb-3">Entrar</h1>
+
+          <form>
           <div class="form-group">
             <label for="usuario">Usuário:</label>
             <input
@@ -29,7 +31,7 @@
 
           <div class="d-flex justify-content-center">
               <button type="submit" class="btn btn-success" (click)="entrar()">Entrar</button>
-          </div>
+          </div></form>
 
           <hr class="mt-5 mb-5">
 
