--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,42 +1,95 @@
-<div class="container-fluid p-0">
-  <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+<div class="conteiner-fluid">
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<div class="row bg-secondary d-flex align-items-center">
+  <div class="col-md-6">
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto d-flex align-items-center">
-        <li class="nav-item active">
-          <img src="https://avatars.githubusercontent.com/u/85457639?v=4" alt="imagem do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
-        </li>
-        <li class="nav-item pl-3">
-          <p class="m-0 font-weight-bold text-white fs-16">Olá, Fulano <i class="fa fa-cog" aria-hidden="true"></i></p>
-        </li>
-      </ul>
-      <ul class="navbar-nav ml-auto d-flex align-items-center">
-        <li class="nav-item pl-3">
-          <a class="m-0 font-weight-bold text-white fs-16" routerLink="/entrar" >Sair </a>
-        </li>
-      </ul>
+    <div class="row d-flex justify-content-center">
+        <div class=" col-md-6 text-white">
+            <h1 class="fs-54">Seja bem vindo(a)!</h1>
+            <h5 class="fs-18">Expresse aqui os seus pensamentos e opniões!</h5>
+        </div>
+    </div>
+
+        <div class="row d-flex justify-content-center mt-3 mb-5">
+          <div class="col-md-6">
+            <button class="btn btn-light mr-2" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
+            <a class="btn btn-outline-light" href="#postagens">Ver Postagens</a>
+          </div>
+        </div>
+    </div>
+
+    <div class="col-md-6 d-flex justify-content-center">
+      <img src="https://i.imgur.com/cJX4ncZ.png" alt="" width="500px" height="500px">
+    </div>
+  </div>
+</div>
+
+
+<div class="continer mb-5 mt-5" id="postagens">
+
+  <nav>
+    <div class="nav nav-tabs font-weight-bold d-flex justify-content-center" id="nav-tab" role="tablist">
+
+      <a class="nav-link active text-secondary" id="nav-todasPostagens-tab" data-toggle="tab" href="#nav-todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as Postagens</a>
+
+      <a class="nav-link text-secondary" id="nav-minhasPostagens-tab" data-toggle="tab" href="#nav-minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas Postagens</a>
+
+      <a class="nav-link text-secondary" id="nav-postagemTema-tab" data-toggle="tab" href="#nav-postagemTema" role="tab" aria-controls="nav-postagemTema" aria-selected="false">Postagem por Tema</a>
+
     </div>
   </nav>
+
+  <div class="tab-content" id="nav-tabContent">
+    <div class="tab-pane fade show active" id="nav-todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
+      Todas as Postagens
+    </div>
+
+    <div class="tab-pane fade" id="nav-minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
+      Minhas Postagens
+    </div>
+
+    <div class="tab-pane fade" id="nav-postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
+      Postagens por Tema
+    </div>
+  </div>
+
 </div>
 
-<div class="bg-secondary">
-<div class="row img-fluid">
-  <div class="col-md-6 text-center">
-    <p class="text-light fs-50">Seja bem <br> vindo(a)!</p>
-    <p class="text-light fs-20">expresse aqui os seus <br> pensamentos e opniões!</p>
-    <button class="p-3 m-3 bg-light border-light">Nova Postagem</button>
-    <button class="p-3 m-3 bg-secondary border-dark">Ver Postagens</button>
-  </div>
-  <div class="col-md-6" id="img-bg">
-  </div>
-</div>
-</div>
 
-<div class="container d-flex justify-content-center">
-  <div class="row d-flex">
-<p class="px-1 font-weight-bold">Todas as postagens</p> <p class="font-weight-bold">|</p> <p class="px-1 font-weight-bold">Minhas postagens</p></div>
+<!-- Modal -->
+<div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="modal-dialog modal-dialog-centered" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modal-dialog modal-dialog-centered">Nova Postagem</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <div class="form-group">
+          <label for="titulo">Título</label>
+          <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
+        </div>
+
+        <div class="form-group">
+          <label for="texto">Texto</label>
+          <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
+        </div>
+
+        <div class="form-group">
+          <label for="texto">Escolha um tema ou  <a data-dismiss="modal" routerLink="/tema">cadastre um novo</a>: </label>
+          <select name="tema" id="tema" class="form-control">
+            <option value="">Temas</option>
+          </select>
+        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-success">Publicar</button>
+      </div>
+    </div>
+  </div>
 </div>
