--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-    
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto d-flex align-items-center">
         <li class="nav-item active">
-          <img src="https://avatars.githubusercontent.com/u/85457639?v=4" alt="imagem do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
+          <img src="{{foto}}" alt="imagem do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
         </li>
         <li class="nav-item pl-3">
-          <p class="m-0 font-weight-bold text-white fs-16">Nome do usuário</p>
+          <p class="m-0 font-weight-bold text-white fs-16">Olá, {{nome}}</p>
         </li>
 
         <li class="nav-item pl-3">
@@ -21,9 +21,11 @@
       </ul>
       <ul class="navbar-nav ml-auto d-flex align-items-center">
         <li class="nav-item pl-3">
-          <a class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+          <a class="m-0 font-weight-bold text-white fs-16"
+          (click)="sair()"
+          >Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
         </li>
       </ul>
-      
+
     </div>
   </nav>
