--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -13,7 +13,7 @@
         <div class="row d-flex justify-content-center mt-3 mb-5">
           <div class="col-md-6">
             <button class="btn btn-light mr-2" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
-            <a class="btn btn-outline-light" href="#postagens">Ver Postagens</a>
+            <a class="btn btn-outline-light" href="#nav-tabContent">Ver Postagens</a>
           </div>
         </div>
     </div>
@@ -32,24 +32,90 @@
 
       <a class="nav-link active text-secondary" id="nav-todasPostagens-tab" data-toggle="tab" href="#nav-todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as Postagens</a>
 
-      <a class="nav-link text-secondary" id="nav-minhasPostagens-tab" data-toggle="tab" href="#nav-minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas Postagens</a>
+      <a (click)="findByIdUsuario()" class="nav-link text-secondary" id="nav-minhasPostagens-tab" data-toggle="tab" href="#nav-minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas Postagens</a>
 
       <a class="nav-link text-secondary" id="nav-postagemTema-tab" data-toggle="tab" href="#nav-postagemTema" role="tab" aria-controls="nav-postagemTema" aria-selected="false">Postagem por Tema</a>
 
     </div>
   </nav>
 
-  <div class="tab-content" id="nav-tabContent">
+  <!-- Card todas Postagens -->
+  <div class="tab-content mt-4" id="nav-tabContent">
     <div class="tab-pane fade show active" id="nav-todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
-      Todas as Postagens
+
+      <div class="card-columns">
+        <div class="card text-center" *ngFor="let item of listaPostagens">
+          <div class="card-body">
+            <h5 class="card-title m-0">{{item.titulo}}</h5>
+            <small class="text-muted">Tema: {{item.tema.descricao}}</small> <!-- mostrando tema -->
+            <p class="card-text mt-3">{{item.texto}}</p>
+            <p class="card-text"><small class="text-muted">
+              <!-- modificando data e hora -->
+              {{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}
+            </small></p>
+
+            <p class="card-text"><small class="text-muted">
+              Postado por: {{item.usuario.nome}}
+            </small></p>
+            <img src="{{item.usuario.foto}}" alt="imagem do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
+
+          </div>
+        </div>
+      </div>
     </div>
 
+    <!-- Card minhas Postagens -->
     <div class="tab-pane fade" id="nav-minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
-      Minhas Postagens
+
+      <div class="card-columns">
+        <div class="card text-center" *ngFor="let item of usuario.postagem">
+          <div class="card-body">
+            <h5 class="card-title m-0">{{item.titulo}}</h5>
+            <small class="text-muted">Tema: {{item.tema.descricao}}</small> <!-- mostrando tema -->
+            <p class="card-text mt-3">{{item.texto}}</p>
+            <p class="card-text"><small class="text-muted">
+              <!-- modificando data e hora -->
+              {{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}
+            </small></p>
+
+            <p class="card-text"><small class="text-muted">
+              Postado por: {{usuario.nome}}
+            </small></p>
+            <img src="{{usuario.foto}}" alt="imagem do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
+
+            <!-- Botões -->
+            <a [routerLink]="['/postagem-edit', item.id]" class="text-success ml-3 mr-3" href="">Editar</a>
+
+            <a [routerLink]="['/postagem-delete', item.id]" class="text-danger" href="">Apagar</a>
+
+          </div>
+        </div>
+      </div>
     </div>
 
+
+    <!-- Card Postagem por Tema -->
     <div class="tab-pane fade" id="nav-postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
-      Postagens por Tema
+
+      <div class="card-columns" *ngFor="let tema of listaTemas">
+        <div class="card text-center" *ngFor="let item of tema.postagem">
+          <div class="card-body">
+            <h5 class="card-title m-0">{{item.titulo}}</h5>
+            <p class="card-text mt-3">{{item.texto}}</p>
+            <p class="card-text"><small class="text-muted">
+              <!-- modificando data e hora -->
+              {{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}
+            </small></p>
+
+            <p class="card-text"><small class="text-muted">
+              Postado por: {{item.usuario.nome}}
+            </small></p>
+            <img src="{{item.usuario.foto}}" alt="imagem do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
+
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
@@ -70,25 +136,27 @@
 
         <div class="form-group">
           <label for="titulo">Título</label>
-          <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
+          <input [(ngModel)]="postagem.titulo" type="text" class="form-control" id="titulo" placeholder="Digite o título">
         </div>
 
         <div class="form-group">
           <label for="texto">Texto</label>
-          <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
+          <textarea [(ngModel)]="postagem.texto" class="form-control" name="texto" id="texto" rows="3"></textarea>
         </div>
 
         <div class="form-group">
           <label for="texto">Escolha um tema ou  <a data-dismiss="modal" routerLink="/tema">cadastre um novo</a>: </label>
-          <select name="tema" id="tema" class="form-control">
-            <option value="">Temas</option>
+          <select name="tema" id="tema" class="form-control" [(ngModel)]="idTema" (change)="findByIdTema()">
+            <option *ngFor="let item of listaTemas" value="{{item.id}}">
+              {{item.descricao}}
+            </option>
           </select>
         </div>
 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-success">Publicar</button>
+        <button type="button" class="btn btn-success"(click)="publicar()" data-dismiss="modal">Publicar</button>
       </div>
     </div>
   </div>
