--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -44,7 +44,8 @@
     <div class="tab-pane fade show active" id="nav-todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
 
       <div class="card-columns">
-        <div class="card text-center" *ngFor="let item of listaPostagens">
+        <div class="card text-center"
+        *ngFor="let item of listaPostagens | orderBy: key: reverse">
           <div class="card-body">
             <h5 class="card-title m-0">{{item.titulo}}</h5>
             <small class="text-muted">Tema: {{item.tema.descricao}}</small> <!-- mostrando tema -->
@@ -68,7 +69,8 @@
     <div class="tab-pane fade" id="nav-minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
 
       <div class="card-columns">
-        <div class="card text-center" *ngFor="let item of usuario.postagem">
+        <div class="card text-center"
+        *ngFor="let item of usuario.postagem | orderBy: key: reverse">
           <div class="card-body">
             <h5 class="card-title m-0">{{item.titulo}}</h5>
             <small class="text-muted">Tema: {{item.tema.descricao}}</small> <!-- mostrando tema -->
@@ -97,7 +99,8 @@
     <!-- Card Postagem por Tema -->
     <div class="tab-pane fade" id="nav-postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
 
-      <div class="card-columns" *ngFor="let tema of listaTemas">
+      <div class="card-columns"
+      *ngFor="let tema of listaTemas  | orderBy: key: reverse">
         <div class="card text-center" *ngFor="let item of tema.postagem">
           <div class="card-body">
             <h5 class="card-title m-0">{{item.titulo}}</h5>
