--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -73,7 +73,7 @@
             <select class="form-control" name="tipo" id="tipo" (change)='tipoUsuario($event)'>
                 <option>Selecione um tipo de usuário:</option>
                 <option value="normal">Normal</option>
-                <option value="adm">Administrador</option>
+                <option *ngIf="servicoDeAutenticacao.adm()" value="adm">Administrador</option>
             </select>
           </div>
           <div class="d-flex justify-content-center">
